IDE-3605 fix create workspace with invalid bundle url can finish